[package]
name = "pingora_learn"
version = "0.2.0"
edition = "2021"

[dependencies]
# Pingora
pingora-core = { git = "https://github.com/cloudflare/pingora.git" }
pingora-proxy = { git = "https://github.com/cloudflare/pingora.git" }
pingora-http = { git = "https://github.com/cloudflare/pingora.git" }
pingora-load-balancing = { git = "https://github.com/cloudflare/pingora.git" }
pingora-limits = { git = "https://github.com/cloudflare/pingora.git" }

# Async runtime
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"

# Database
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "uuid", "chrono"] }

# Redis
redis = { version = "0.26", features = ["tokio-comp", "connection-manager"] }

# Authentication
bcrypt = "0.15"
jsonwebtoken = "9"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"

# UUID
uuid = { version = "1.0", features = ["v4", "serde"] }

# Time
chrono = { version = "0.4", features = ["serde"] }

# Utilities
clap = { version = "4", features = ["derive"] }
log = "0.4"
env_logger = "0.11"
bytes = "1.0"
http = "1.0"
rand = "0.8"

# Environment variables
dotenv = "0.15"

# Error handling
thiserror = "1.0"
anyhow = "1.0"